biosig4c++ (1.6.1-1) unstable; urgency=low

  * support for additional data formats
       ABF1, AXG, 
  * support improved for 
       CFS (performance, scaling), SCP (convert strings to UTF-8), 
       ISHNE, HEKA (TimeStamps, performance), MFER, IGOR
  * bug fixes in supported data formats: 
       EDF+, ITX, HEKA (scaling), CFS

  * JSON output format for header added. 

  * ABI changed:
    The size of some structs, and some enumeration types have changed.
    Most likely, You'll need to recompile your application, even if 
    the dynamic biosig library (.so, .dll) is used.

  * API change: field CHANNEL->PhysDim is removed.
     This is already deprecated for quite a while.
     Use instead the function PhysDim3(CHANNEL->PhysDimCode)

 -- Alois Schloegl <alois.schloegl@ist.ac.at>  Thu, 12 Jun 2014 22:35:25 +0200

biosig4c++ (1.4.1-1) experimental; urgency=low

  * Fresh upstream release:
    - adopted up_correct_biosig_LIBS_in_mex and up_no_need_for_-lidn
      patches
    - restored some API removed in 1.4.0 (one overload
      _Z8ReadByteIaEvRT_@Base was still removed, allowing to slip through)
  * debian/watch: adjusted according to Alois (upstream) recommendation
  * debian/control:
    - Removed libxml2 from Build-Depends (upstream's hint)

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 25 Oct 2012 10:22:07 -0400

biosig4c++ (1.3.6-1) experimental; urgency=low

  * New upstream (primarily bugfix) release
  * debian/patches
    - deb_no_mex_copy_upstairs: adjusted to just override COPY in mex/Makefile
    - deb_no_locals: adopted upstream
    - others refreshed to reflect (partial) adoption upstream and changes
    - up_no_need_for_-lidn to remove obsolete -lidn 

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 07 Sep 2012 14:44:22 -0400

biosig4c++ (1.3.5-1) experimental; urgency=low

  * New upstream release (restores compatibility with API 1.3 broken in
    non-uploaded revisions)
  * debian/patches